# vc_service_back_graphql

./: .gitignore  .pre-commit-config.yaml  app.py  docker-compose.yaml  pyproject.toml  sample.env
.github/workflows/: pre_commit.yml
migrations/: env.py
migrations/versions/: 132a93b06cf8_.py  4641ea3a9814_.py  515d5a15c72c_.py  8e21a91869d6_.py  99db3e0030ea_.py  9c5486269fce_.py  be6411b26177_.py  c0b151bf5254_.py  f7563c3ac462_init_revision.py  fd102aad53fe_.py
vc_service_back/: __init__.py  config.py  database.py  extentions.py  models.py
vc_service_back/appointments/: models.py
vc_service_back/clients/: models.py  query.py  schema.py
vc_service_back/employee/: models.py  query.py  repo.py  schema.py
vc_service_back/equipment/: models.py  query.py  repo.py  schema.py
vc_service_back/medications/: models.py  query.py  repo.py  schema.py
vc_service_back/pets/: models.py  query.py  repo.py  schema.py
